# webmux

./: .COMPLETION_REPORT.txt  BOOT-FLOW.md  CONTRIBUTING.md  QUICKSTART.md  README.md  STATUS.md  TEST-BOOT.md  boot.js  build.sh  dev-server.sh  index.html  old.js
kernel/: kernel.js  main.js
kernel/boot/: params.js  rootfs.js
kernel/devices/: audio.js  clipboard.js  clock.js  console.js  consoleui.js  framebuffer.js  gpu.js  hid.js  input.js  main.js  netcard.js  random.js  registry.js  serial.js  usb.js
kernel/fs/: opfs.js  procfs.js  vfs.js
kernel/net/: loopback.js
kernel/rootfs/: index.js  manager.js
kernel/scheduler/: process.js  scheduler.js
kernel/syscalls/: directory.js  epoll.js  fcntl.js  file.js  ipc.js  memory.js  net.js  permission.js  poll.js  process.js  process_extended.js  resource.js  signal.js  signal_extended.js  time.js
kernel/wasm/: instance.js  loader.js  memory.js  wasi.js
rootfs/: .wasmux.json  MANIFEST.json  README.md
rootfs/dev/: DEVICES
rootfs/etc/: environment  fstab  group  hostname  passwd  profile
rootfs/sbin/: init
rootfs/var/lib/wpm/: coreutils.wpm.json  system-libs.wpm.json
source/: README.md
source/coreutils/: Cargo.toml
source/coreutils/src/: cat.rs  cp.rs  echo.rs  ls.rs  mkdir.rs  mv.rs  pwd.rs  rm.rs  touch.rs  whoami.rs
source/init/: Cargo.toml
source/init/src/: main.rs
source/libc-wrapper/: Cargo.toml
source/libc-wrapper/src/: lib.rs
source/sh/: Cargo.toml
source/sh/src/: main.rs
